@@ -1,5 +1,4 @@
-<?php
-//
+<?php // -*- php -*-
 // Copyright (C) 2006 Mekensleep
 //
 // Mekensleep
@@ -86,6 +85,25 @@ class testcurrency extends PHPUnit2_Framework_TestCase
       $this->assertEquals($other_note, $this->currency->_check_note($other_note));
     }
 
+    public function test03_merge_two_notes()
+    {
+      $note1 = $this->currency->get_note(100);
+      $this->assertEquals(TRUE, $this->currency->commit($note1[2]));
+      $note2 = $this->currency->get_note(100);
+      $this->assertEquals(TRUE, $this->currency->commit($note2[2]));
+      $this->assertNotEquals($note1[2], $note2[2]);
+      $notes = $this->currency->merge_notes_columns(array($note1[1], $note2[1]), array($note1[2], $note2[2]), array($note1[3], $note2[3]));
+      $this->assertEquals(1, count($notes));
+      $other_note = $notes[0];
+      $this->assertEquals('http://fake/', $note1[0]);
+      $this->assertEquals(1, $other_note[1]);
+      $this->assertEquals(40, strlen($other_note[2]));
+      $this->assertNotEquals($note1[2], $other_note[2]);
+      $this->assertEquals(200, $other_note[3]);
+      $this->assertEquals(TRUE, $this->currency->commit($other_note[2]));
+      $this->assertEquals($other_note, $this->currency->_check_note($other_note));
+    }
+
     public function test03_merge_change_note()
     {
       $note = $this->test02_change_note();
@@ -100,6 +118,45 @@ class testcurrency extends PHPUnit2_Framework_TestCase
       $this->assertEquals($other_note, $this->currency->_check_note($other_note));
     }
 
+    public function test04_break_note()
+    {
+      $note = $this->test01_get_note();
+      $notes = $this->currency->break_note($note[1], $note[2], $note[3], array(27, 13, 1));
+      $this->assertEquals(10, count($notes));
+      $this->assertEquals('http://fake/', $notes[0][0]);
+      $this->assertEquals(27, $notes[2][3]);
+      $this->assertEquals(13, $notes[3][3]);
+      $this->assertEquals(1, $notes[9][3]);
+    }
+
+    public function test05_put_note()
+    {
+      $note = $this->test01_get_note();
+      $this->currency->put_note($note[1], $note[2], $note[3]);
+    }
+
+    public function test06_fail_check_note()
+    {
+      try {
+        $this->currency->check_note(1, 'bugous " name', 10);
+      } catch(Exception $error) {
+        $this->assertEquals(currency::E_INVALID_NOTE, $error->getCode());
+        return;
+      }
+      $this->fail('should throw an exception');
+    }
+
+    public function test07_fail_check_note()
+    {
+      $note = $this->currency->get_note(100);
+      try {
+        $other_note = $this->currency->check_note($note[1], $note[2], $note[3]);
+      } catch(Exception $error) {
+        $this->assertEquals(currency::E_CHECK_NOTE_FAILED, $error->getCode());
+        return;
+      }
+      $this->fail('should throw an exception');
+    }
 }
 
 //
